--- a/crawler-conf.yaml
+++ b/crawler-conf.yaml
@@ -13,13 +13,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Custom configuration for StormCrawler
-# This is used to override the default values from crawler-default.xml and provide additional ones 
+# Custom configuration for StormCrawler with SQL Module
+# This is used to override the default values from crawler-default.xml and provide additional ones
 # for your custom components.
 # Use this file with the parameter -conf when launching your extension of ConfigurableTopology.
 # This file does not contain all the key values but only the most frequently used ones. See crawler-default.xml for an extensive list.
 
-config: 
+config:
   topology.workers: 1
   topology.message.timeout.secs: 300
   topology.max.spout.pending: 100
@@ -34,6 +34,33 @@ config:
   topology.kryo.register:
     - org.apache.stormcrawler.Metadata
     - org.apache.stormcrawler.persistence.Status
+
+  #######
+  # SQL Configuration
+  #######
+  sql.connection:
+    url: "jdbc:mysql://mysql:3306/crawl?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC"
+    user: "crawler"
+    password: "crawler"
+    rewriteBatchedStatements: "true"
+    useBatchMultiSend: "true"
+
+  # Table names
+  sql.status.table: "urls"
+  sql.metrics.table: "metrics"
+
+  # SQL Spout configuration (if using SQLSpout instead of URLFrontier)
+  sql.spout.max.results: 100
+  sql.max.urls.per.bucket: 5
+
+  # Time in secs for which the URLs will be considered for fetching after ack/fail
+  spout.ttl.purgatory: 30
+
+  # Min time (in msecs) to allow between 2 successive queries to SQL
+  spout.min.delay.queries: 2000
+
+  # Delay since previous query date (in secs) after which the nextFetchDate value will be reset
+  spout.reset.fetchdate.after: 120
 
   # Lists the metadata to transfer to outlinks
   # Used by Fetcher and SiteMapParser for redirections,
@@ -59,11 +86,11 @@ config:
 
   # The agent name must be compliant with RFC 9309 (section 2.2.1) 
   # i.e. it MUST contain only uppercase and lowercase letters ("a-z" and "A-Z), underscores ("_"), and hyphens ("-")
-  http.agent.name: "stormcrawler-warc"
+  http.agent.name: "stormcrawler-sql"
   # version of your crawler
   http.agent.version: "1.0"
   # description of what it does
-  http.agent.description: "crawls for warc files"
+  http.agent.description: "StormCrawler with SQL persistence"
   # URL webmasters can go to learn about it
   http.agent.url: "https://does-not.exist"
   # Finally, an email so that they can get in touch with you
@@ -162,7 +189,7 @@ config:
   - format
 
   # Metrics consumers:
+  # Using SQL MetricsConsumer to persist metrics to MySQL
   topology.metrics.consumer.register:
-     - class: "org.apache.storm.metric.LoggingMetricsConsumer"
+     - class: "org.apache.stormcrawler.sql.metrics.MetricsConsumer"
        parallelism.hint: 1
-
